--- a/server/package.json
+++ b/server/package.json
@@ -17,8 +17,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "fs": "^0.0.1-security",
+    "https": "^1.0.0",
     "moment-timezone": "^0.5.45",
-    "node-schedule": "^2.1.1"
+    "node-schedule": "^2.1.1",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
