--- a/whos-that-pkmn/package.json
+++ b/whos-that-pkmn/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://scc8371.github.io/whosthatpkmn",
   "name": "whos-that-pkmn",
   "private": true,
   "version": "0.0.0",
@@ -8,7 +7,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "tsc -b && vite build -d build --base=/pokemon-wordle/",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
